update sort index